--- a/1week_1.html
+++ b/1week_1.html
@@ -1,8 +1,24 @@
 <html>
-    <title>첫 번째 과제</title>
+    <title>프로그래밍 기초</title>
     <head></head>
     <body>
-        <p>TCP는 프로토콜이다.</p>
-        <br>
+        <ol>
+            <li>UEFI</li>
+            <li>WOL</li>
+            <li>AC부팅</li>
+            <li>*티밍(본딩)*</li>
+            <li>가상머신(네이티브)와 도커</li>
+            <li>라즈베리파이</li>
+            <li>*VPN*</li>
+            <li>*RDP정의와 공격*</li>
+            <li>병렬과 동시성 프로그래밍</li>
+            <li>문맥교환</li>
+            <li>타입스크립트와 자바스크립트</li>
+            <li>REST-API</li>
+            <li>nest-JS</li>
+            <li>CI/CD</li>
+            <li>에자일 기법</li>
+            <li>폭포수 기법</li>
+        </ol>
     </body>
 </html>
