--- a/1week_1.html
+++ b/1week_1.html
@@ -3,7 +3,9 @@
     <head></head>
     <body>
         <ol>
-            <li>UEFI</li>
+            <li>UEFI
+                <p>UEFI는 BIOS같이 컴퓨터가 처음 부팅될 때 사용되는 기본 입출력 방식을 담고 있는 소프트웨어이다. 펌웨어인가?</p>
+            </li>
             <li>WOL</li>
             <li>AC부팅</li>
             <li>*티밍(본딩)*</li>
