--- a/1week_1.html
+++ b/1week_1.html
@@ -4,7 +4,10 @@
     <body>
         <ol>
             <li>UEFI
-                <p>UEFI는 BIOS같이 컴퓨터가 처음 부팅될 때 사용되는 기본 입출력 방식을 담고 있는 소프트웨어이다. 펌웨어인가?</p>
+                <p>Unified Extensible Firmware Interface, 
+                    BIOS를 대체하는 펌웨어 규격으로, IBM PC XT부터 이어진 16비트 BIOS의 제약 사항을 극복하고 
+                    새로운 하드웨어를 더 유연하게 지원하기 위해서 64비트 기반으로 개발되었다. 
+                <p>1990년대 중반부터 인텔이 개발해 EFI(Extensible Firmware Interface)라는 이름으로 인텔 아이태니엄 시리즈에 사용되었으며, 2005년 UEFI 포럼을 발족해 포럼에 공개해 현재의 이름인 UEFI로 변경되었다.</p>
             </li>
             <li>WOL</li>
             <li>AC부팅</li>
