--- a/1week_1.html
+++ b/1week_1.html
@@ -1,13 +1,14 @@
 <html>
-    <title>프로그래밍 기초</title>
+    <title>프로그래밍 기초 1주차 과제(1)</title>
     <head></head>
     <body>
         <ol>
             <li>UEFI
-                <p>Unified Extensible Firmware Interface, 
-                    BIOS를 대체하는 펌웨어 규격으로, IBM PC XT부터 이어진 16비트 BIOS의 제약 사항을 극복하고 
-                    새로운 하드웨어를 더 유연하게 지원하기 위해서 64비트 기반으로 개발되었다. 
-                <p>1990년대 중반부터 인텔이 개발해 EFI(Extensible Firmware Interface)라는 이름으로 인텔 아이태니엄 시리즈에 사용되었으며, 2005년 UEFI 포럼을 발족해 포럼에 공개해 현재의 이름인 UEFI로 변경되었다.</p>
+                <p>Unified Extensible Firmware Interface, BIOS를 대체하는 펌웨어 규격으로, 
+                <p>IBM PC XT부터 이어진 16비트 BIOS의 제약 사항을 극복하고 
+                <p>새로운 하드웨어를 더 유연하게 지원하기 위해서 64비트 기반으로 개발되었다.
+                <p>1990년대 중반부터 인텔이 개발해 EFI(Extensible Firmware Interface)라는 이름으로 
+                <p>인텔 아이태니엄 시리즈에 사용되었으며, 2005년 UEFI 포럼을 발족해 포럼에 공개해 현재의 이름인 UEFI로 변경되었다.
             </li>
             <li>WOL</li>
             <li>AC부팅</li>
