--- a/1week_1.html
+++ b/1week_1.html
@@ -4,39 +4,40 @@
     <body>
         <ol>
             <li>1) UEFI
-                <p>Unified Extensible Firmware Interface, BIOS를 대체하는 펌웨어 규격으로, </p>
-                <p>IBM PC XT부터 이어진 16비트 BIOS의 제약 사항을 극복하고</p> 
-                <p>새로운 하드웨어를 더 유연하게 지원하기 위해서 64비트 기반으로 개발되었다.</p>
-                <p>1990년대 중반부터 인텔이 개발해 EFI(Extensible Firmware Interface)라는 이름으로</p> 
-                <p>인텔 아이태니엄 시리즈에 사용되었으며, 2005년 UEFI 포럼을 발족해 포럼에 공개해 현재의 이름인 UEFI로 변경되었다.</p>
+                <p>Unified Extensible Firmware Interface, BIOS를 대체하는 펌웨어 규격으로,
+                    <br>IBM PC XT부터 이어진 16비트 BIOS의 제약 사항을 극복하고
+                    <br>새로운 하드웨어를 더 유연하게 지원하기 위해서 64비트 기반으로 개발되었다.
+                    <br>1990년대 중반부터 인텔이 개발해 EFI(Extensible Firmware Interface)라는 이름으로
+                    <br>인텔 아이태니엄 시리즈에 사용되었으며, 2005년 UEFI 포럼을 발족해 포럼에 공개해 현재의 이름인 UEFI로 변경되었다.
+                </p>
             </li>
-            <br>
+            <hr>
             <li>2)WOL</li>
-            <br>
+            <hr>
             <li>3)AC부팅</li>
-            <br>
+            <hr>
             <li>4)티밍(본딩)</li>
-            <br>
+            <hr>
             <li>5)가상머신(네이티브)와 도커</li>
-            <br>
+            <hr>
             <li>6)라즈베리파이</li>
-            <br>
+            <hr>
             <li>7)VPN</li>
-            <br>
+            <hr>
             <li>8)RDP정의와 공격</li>
-            <br>
+            <hr>
             <li>9)병렬과 동시성 프로그래밍</li>
-            <br>
+            <hr>
             <li>10)문맥교환</li>
-            <br>
+            <hr>
             <li>11)타입스크립트와 자바스크립트</li>
-            <br>
+            <hr>
             <li>12)REST-API</li>
-            <br>
+            <hr>
             <li>13)nest-JS</li>
-            <br>
+            <hr>
             <li>14)CI/CD</li>
-            <br>
+            <hr>
             <li>15)에자일 기법</li>
         </ol>
     </body>
