--- a/1week_1.html
+++ b/1week_1.html
@@ -3,7 +3,7 @@
     <head></head>
     <body>
         <ol>
-            <li>1) UEFI
+            <li>UEFI
                 <p>Unified Extensible Firmware Interface, BIOS를 대체하는 펌웨어 규격으로,
                     <br>IBM PC XT부터 이어진 16비트 BIOS의 제약 사항을 극복하고
                     <br>새로운 하드웨어를 더 유연하게 지원하기 위해서 64비트 기반으로 개발되었다.
@@ -12,33 +12,33 @@
                 </p>
             </li>
             <hr>
-            <li>2)WOL</li>
+            <li>WOL</li>
             <hr>
-            <li>3)AC부팅</li>
+            <li>AC부팅</li>
             <hr>
-            <li>4)티밍(본딩)</li>
+            <li>티밍(본딩)</li>
             <hr>
-            <li>5)가상머신(네이티브)와 도커</li>
+            <li>가상머신(네이티브)와 도커</li>
             <hr>
-            <li>6)라즈베리파이</li>
+            <li>라즈베리파이</li>
             <hr>
-            <li>7)VPN</li>
+            <li>VPN</li>
             <hr>
-            <li>8)RDP정의와 공격</li>
+            <li>RDP정의와 공격</li>
             <hr>
-            <li>9)병렬과 동시성 프로그래밍</li>
+            <li>병렬과 동시성 프로그래밍</li>
             <hr>
-            <li>10)문맥교환</li>
+            <li>문맥교환</li>
             <hr>
-            <li>11)타입스크립트와 자바스크립트</li>
+            <li>타입스크립트와 자바스크립트</li>
             <hr>
-            <li>12)REST-API</li>
+            <li>REST-API</li>
             <hr>
-            <li>13)nest-JS</li>
+            <li>nest-JS</li>
             <hr>
-            <li>14)CI/CD</li>
+            <li>CI/CD</li>
             <hr>
-            <li>15)에자일 기법</li>
+            <li>에자일 기법</li>
         </ol>
     </body>
 </html>
