--- a/1week_2.html
+++ b/1week_2.html
@@ -3,35 +3,35 @@
     <head></head>
     <body>
         <ol>
-            <li>16)폭포수 기법</li>
+            <li>폭포수 기법</li>
             <hr>
-            <li>17)스위치와 라우터</li>
+            <li>스위치와 라우터</li>
             <hr>
-            <li>18)클라우드 서버</li>
+            <li>클라우드 서버</li>
             <hr>
-            <li>19)nginx</li>
+            <li>nginx</li>
             <hr>
-            <li>20)메모리 변조 해킹-Rust의 메모리 프로텍션</li>
+            <li>메모리 변조 해킹-Rust의 메모리 프로텍션</li>
             <hr>
-            <li>21)Dev-ops</li>
+            <li>Dev-ops</li>
             <hr>
-            <li>22)포트포워딩(프록시)</li>
+            <li>포트포워딩(프록시)</li>
             <hr>
-            <li>23)리버스 엔지니어링</li>
+            <li>리버스 엔지니어링</li>
             <hr>
-            <li>24)디지털 포렌식</li>
+            <li>디지털 포렌식</li>
             <hr>
-            <li>25)IP</li>
+            <li>IP</li>
             <br>
-            <li>26)TCP와 UDP</li>
+            <li>TCP와 UDP</li>
             <hr>
-            <li>27)HTTP</li>
+            <li>HTTP</li>
             <hr>
-            <li>28)DHCP</li>
+            <li>DHCP</li>
             <hr>
-            <li>29)DNS</li>
+            <li>DNS</li>
             <hr>
-            <li>30)OSI-7계층</li>
+            <li>OSI-7계층</li>
         </ol>
     </body>
 </html>
