--- a/1week_1.html
+++ b/1week_1.html
@@ -4,11 +4,14 @@
     <body>
         <ol>
             <li>UEFI
-                <p>Unified Extensible Firmware Interface, BIOS를 대체하는 펌웨어 규격으로,
-                    <br>IBM PC XT부터 이어진 16비트 BIOS의 제약 사항을 극복하고
-                    <br>새로운 하드웨어를 더 유연하게 지원하기 위해서 64비트 기반으로 개발되었다.
-                    <br>1990년대 중반부터 인텔이 개발해 EFI(Extensible Firmware Interface)라는 이름으로
-                    <br>인텔 아이태니엄 시리즈에 사용되었으며, 2005년 UEFI 포럼을 발족해 포럼에 공개해 현재의 이름인 UEFI로 변경되었다.
+                <p>
+                    <br>"Unified Extensible Firmware Interface"의 약자로, 컴퓨터의 부트 프로세스를 제어하는 소프트웨어 인터페이스이다.
+                    <br>보통 "UEFI" 혹은 "UEFI BIOS"라고도 불리며, 대부분의 최신 컴퓨터 시스템에서 사용된다.
+                    <br>UEFI는 기존의 BIOS(Basic Input/Output System)를 대체하여 컴퓨터 부팅 과정에서 하드웨어 초기화, 부트로더 실행, 운영체제 로딩 등의 작업을 담당한다. 
+                    <br>BIOS와 달리 그래픽 사용자 인터페이스(GUI)를 제공하며, 터치 스크린, 마우스, 네트워크 기능 등과 같은 고급 기능을 지원하고 
+                    <br>보다 큰 부트 디스크 용량, 향상된 보안 기능, 운영체제 독립성 등의 장점을 가지고 있다.
+                    <br>
+                    
                 </p>
             </li>
             <hr>
