--- a/1week_1.html
+++ b/1week_1.html
@@ -2,46 +2,120 @@
     <title>프로그래밍 기초 1주차 과제(1)</title>
     <head></head>
     <body>
-        <ol>
-            <li>UEFI
+        <ul>
+            <li><b>UEFI</b>
                 <p>
-                    <br>"Unified Extensible Firmware Interface"의 약자로, 컴퓨터의 부트 프로세스를 제어하는 소프트웨어 인터페이스이다.
+                    "Unified Extensible Firmware Interface"의 약자로, 컴퓨터의 부트 프로세스를 제어하는 소프트웨어 인터페이스이다.
                     <br>보통 "UEFI" 혹은 "UEFI BIOS"라고도 불리며, 대부분의 최신 컴퓨터 시스템에서 사용된다.
                     <br>UEFI는 기존의 BIOS(Basic Input/Output System)를 대체하여 컴퓨터 부팅 과정에서 하드웨어 초기화, 부트로더 실행, 운영체제 로딩 등의 작업을 담당한다. 
                     <br>BIOS와 달리 그래픽 사용자 인터페이스(GUI)를 제공하며, 터치 스크린, 마우스, 네트워크 기능 등과 같은 고급 기능을 지원하고 
                     <br>보다 큰 부트 디스크 용량, 향상된 보안 기능, 운영체제 독립성 등의 장점을 가지고 있다.
-                    <br>
-                    
                 </p>
             </li>
             <hr>
-            <li>WOL</li>
+            <li>
+                <b>WOL</b>
+                <p>
+                    "Wake-on-LAN"의 약자로, 네트워크를 이용해 원격으로 컴퓨터를 부팅하는 방법을 말한다. 컴퓨터의 전원이 꺼진 상태에서도 가능하다.
+                    <br>WOL을 사용하려면 컴퓨터의 메인보드나 네트워크 어댑터에서 WOL을 지원해야 하고, 컴퓨터의 BIOS 설정에서 WOL 기능을 활성화해야한다.
+                    <br>WOL을 사용하면 원격으로 WOL 패킷을 생성하여 대상 컴퓨터의 MAC 주소를 포함한 특정 네트워크 패킷을 로컬 네트워크 또는 인터넷을 통해 전송한다.
+                    <br>컴퓨터의 네트워크 어댑터는 전원이 꺼져 있어도 WOL 패킷을 수신하고, 이를 인식하여 컴퓨터를 부팅하는 것이다.
+                    <br>WOL은 회사에서 집에 있는 컴퓨터에 원격으로 접속하여 작업을 해야 할 경우, 서버 관리나 IT 관리 등 원격에서 컴퓨터를 켜고 작업을 수행해야 할 때 유용하다.
+                </p>
+            </li>
             <hr>
-            <li>AC부팅</li>
+            <li>
+                <b>AC부팅</b>
+                <p>
+                    AC 부팅은 대부분의 데스크탑 컴퓨터와 일부 서버에서 사용되는 일반적인 부팅 방식이다.
+                    <br>AC는 Alternating Current(교류 전류)의 줄임말로, 일반적으로 가정이나 사무실에서 사용되는 전원이다.
+                    <br>일반적으로 컴퓨터를 부팅하는 방식은 AC 부팅 방식이다.
+                    <br>AC 부팅은 컴퓨터의 전원이 완전히 끊어진 상태에서부터 시작된다. 
+                    <br>전원이 연결되면 메인보드에 전기가 공급되고, 메인보드는 초기 부팅 프로세스를 시작하는데, 이 프로세스에서는 하드웨어 초기화, BIOS 또는 UEFI 로드, 부트 로더 실행 등의 단계를 거쳐 운영체제가 시작된다.
+                    <br>참고로 몇몇 모바일 기기는 배터리 전원을 사용하여 부팅할 수도 있으며, 이를 "배터리 부팅"이라고 합니다.
+                </p>
+            </li>
             <hr>
-            <li>티밍(본딩)</li>
+            <li>
+                <b>티밍(본딩)</b>
+            </li>
             <hr>
-            <li>가상머신(네이티브)와 도커</li>
+            <li>
+                <b>가상머신(네이티브)와 도커</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>라즈베리파이</li>
+            <li>
+                <b>라즈베리파이</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>VPN</li>
+            <li>
+                <b>VPN</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>RDP정의와 공격</li>
+            <li>
+                <b>RDP정의와 공격</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>병렬과 동시성 프로그래밍</li>
+            <li>
+                <b>병렬과 동시성 프로그래밍</b>
+                <p>
+
+                </p>
+            </li> 
             <hr>
-            <li>문맥교환</li>
+            <li>
+                <b>문맥교환</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>타입스크립트와 자바스크립트</li>
+            <li>
+                <b>타입스크립트와 자바스크립트</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>REST-API</li>
+            <li>
+                <b>REST-API</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>nest-JS</li>
+            <li>
+                <b>nest-JS</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>CI/CD</li>
+            <li>
+                <b>CI/CD</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>에자일 기법</li>
-        </ol>
+            <li>
+                <b>에자일 기법</b>
+                <p>
+                    
+                </p>
+            </li>
+        </ul>
     </body>
 </html>
