--- a/1week_2.html
+++ b/1week_2.html
@@ -2,36 +2,111 @@
     <title>프로그래밍 기초 1주차 과제(2)</title>
     <head></head>
     <body>
-        <ol>
-            <li>폭포수 기법</li>
+        <ul>
+            <li>
+                <b>폭포수 기법</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>스위치와 라우터</li>
+            <li>
+                <b>스위치와 라우터</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>클라우드 서버</li>
+            <li>
+                <b>클라우드 서버</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>nginx</li>
+            <li>
+                <b>nginx</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>메모리 변조 해킹-Rust의 메모리 프로텍션</li>
+            <li>
+                <b>메모리 변조 해킹-Rust의 메모리 프로텍션</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>Dev-ops</li>
+            <li>
+                <b>Dev-ops</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>포트포워딩(프록시)</li>
+            <li>
+                <b>포트포워딩(프록시)</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>리버스 엔지니어링</li>
+            <li>
+                <b>리버스 엔지니어링</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>디지털 포렌식</li>
+            <li>
+                <b>디지털 포렌식</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>IP</li>
+            <li>
+                <b>IP</b>
+                <p>
+
+                </p>
+            </li>
             <br>
-            <li>TCP와 UDP</li>
+            <li>
+                <b>TCP와 UDP</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>HTTP</li>
+            <li>
+                <b>HTTP</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>DHCP</li>
+            <li>
+                <b>DHCP</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>DNS</li>
+            <li>
+                <b>DNS</b>
+                <p>
+
+                </p>
+            </li>
             <hr>
-            <li>OSI-7계층</li>
-        </ol>
+            <li>
+                <b>OSI-7계층</b>
+                <p>
+                    
+                </p>
+            </li>
+        </ul>
     </body>
 </html>
