--- a/1week_1.html
+++ b/1week_1.html
@@ -31,19 +31,32 @@
                     <br>AC는 Alternating Current(교류 전류)의 줄임말로, 일반적으로 가정이나 사무실에서 사용되는 전원이다.
                     <br>일반적으로 컴퓨터를 부팅하는 방식은 AC 부팅 방식이다.
                     <br>AC 부팅은 컴퓨터의 전원이 완전히 끊어진 상태에서부터 시작된다. 
-                    <br>전원이 연결되면 메인보드에 전기가 공급되고, 메인보드는 초기 부팅 프로세스를 시작하는데, 이 프로세스에서는 하드웨어 초기화, BIOS 또는 UEFI 로드, 부트 로더 실행 등의 단계를 거쳐 운영체제가 시작된다.
-                    <br>참고로 몇몇 모바일 기기는 배터리 전원을 사용하여 부팅할 수도 있으며, 이를 "배터리 부팅"이라고 합니다.
+                    <br>전원이 연결되면 메인보드에 전기가 공급되고, 메인보드는 초기 부팅 프로세스를 시작하는데, 
+                    <br>이 프로세스에서는 하드웨어 초기화, BIOS 또는 UEFI 로드, 부트 로더 실행 등의 단계를 거쳐 운영체제가 시작된다.
+                    <br>참고로 몇몇 모바일 기기는 배터리 전원을 사용하여 부팅할 수도 있으며, 이를 "배터리 부팅"이라고 한다.
                 </p>
             </li>
             <hr>
             <li>
                 <b>티밍(본딩)</b>
+                <p>
+
+                </p>
             </li>
             <hr>
             <li>
                 <b>가상머신(네이티브)와 도커</b>
                 <p>
-
+                    가상머신(Virtual Machine)은 현재 사용하는 운영체제 내에서 다른 운영체제를 동작할 수 있도록 해주는 응용 소프트웨어를 말한다.
+                    <br>"가상"이라는 이름에서 알 수 있듯이 실제 존재하지는 않지만 가상의 새로운 컴퓨터 하드웨어가 존재하는 것처럼 여겨 
+                    <br>그 하드웨어에 Windows, MacOS, Linux 등의 현재 Host컴퓨터의 OS와 같거나 다른 OS들을 설치해서 그 컴퓨터를 현실에서 동작하는 것과 같이 사용할 수 있다.
+                    <br>가상머신 중 네이티브(Native)는 주어진 플랫폼 또는 운영체제에서 직접 실행되는 응용 프로그램을 말한다.
+                    <br>하지만 가상머신에는 몇 가지 단점이 존재하는데, 그 중 대표적인 것은 가상머신의 OS를 현재 Host컴퓨터에서 동작하고, 그 내부 동작들도 Host컴퓨터가 처리하게 되므로
+                    <br>경우에 따라 동작 시간이 오래 걸리기도 하고, Host컴퓨터가 처리해야할 명령이 너무 많아진다는 것이다.
+                    <br>이를 처리하기 위해 "도커"라는 컨테이너화(Containerization) 기술을 제공하는 오픈 소스 플랫폼을 사용한다.
+                    <br>컨테이너화 기술은 "컨테이너"라는 고립된 공간 내에서 실행되고 해당 컨테이너에 필요한 라이브러리, 실행 파일, 구성 파일 등의 종속성이 포함되어 있는 컨테이너를 이용해
+                    <br>호스트 시스템의 운영체제 커널을 공유하는 기술을 말하는데, 이를 이용하면 가상머신보다 가볍고 빠르게 시스템 리소스를 활용할 수 있다.
+                    <br>도커를 이용하면 응용 프로그램과 그에 필요한 종속성을 격리된 환경인 컨테이너에 패키징할 수 있다.
                 </p>
             </li>
             <hr>
@@ -113,7 +126,7 @@
             <li>
                 <b>에자일 기법</b>
                 <p>
-                    
+
                 </p>
             </li>
         </ul>
