--- a/1week_1.html
+++ b/1week_1.html
@@ -63,21 +63,33 @@
             <li>
                 <b>라즈베리파이</b>
                 <p>
-
+                    라즈베리 파이(Raspberry Pi)는 싱글 보드 컴퓨터로, 영국의 라즈베리 파이 재단에서 개발한 소형 컴퓨터이다.
+                    <br>라즈베리 파이는 작고 저렴한 가격으로 구매할 수 있고, 보통 크레딧 카드 크기의 보드에 CPU, 메모리, 그래픽, I/O 포트 등이 통합된 구성으로 제작된다. 
+                    <br>다양한 모델과 사양이 있는데 최신 모델은 ARM 기반 프로세서를 사용하고, Raspbian, Ubuntu 등 여러 가지 운영체제를 지원한다.
+                    <br>주로 교육, IoT 프로젝트, 서버 컴퓨터 등으로 사용된다.
                 </p>
             </li>
             <hr>
             <li>
                 <b>VPN</b>
                 <p>
-
+                    VPN(Virtual Private Network)은 공용 네트워크를 통해 안전하게 데이터를 전송하기 위한 보안 기술이다.
+                    <br>VPN은 인터넷 연결을 이용해 사용자의 장치와 원격 서버 또는 네트워크 간에 암호화된 터널을 생성하여 데이터의 기밀성과 안전성을 보장한다.
+                    <br>주로 개인 정보 보호, 네트워크 우회 접근, 원격 액세스 등을 위해 사용한다.
                 </p>
             </li>
             <hr>
             <li>
                 <b>RDP정의와 공격</b>
                 <p>
-
+                    RDP(Remote Desktop Protocol)는 원격 컴퓨터와의 연결을 위한 프로토콜이다. 
+                    <br>RDP 기술은 Windows 운영체제에서 원격 데스크톱 기능을 제공하고, 사용자가 원격으로 다른 컴퓨터에 접속하여 해당 컴퓨터를 제어할 수 있게 한다. 
+                    <br>RDP를 사용하면 원격으로 작업하는 동안 원격 컴퓨터의 화면, 파일 및 애플리케이션을 실시간으로 확인하고 조작할 수 있다.
+                    <br>RDP를 사용하면 편리하게 원격 접속을 할 수 있지만, 해커들이 RDP를 악용해 공격을 해올 수도 있다.
+                    <br>공격의 유형에는 RDP 서버에 로그인하기 위해 로그인이 성공할 때까지 모든 경우를 대입하는 브루트 포스 공격(무차별 대입 공격), 
+                    <br>RDP 소프트웨어 또는 관련 서비스의 취약점을 이용하여 공격자가 원격 컴퓨터에 액세스하고 시스템을 침해하는 취약점 악용 공격(Exploitation of Vulnerabilities),
+                    <br>네트워크 트래픽을 가로채어 원격 접속 시도를 중간에서 감시하고 조작해 사용자의 RDP 세션을 도청하거나 조작하는 중간자 공격(Man-in-the-Middle Attack) 등이 있다.
+                    <br>이런 공격을 방어하기 위해서는 최신 보안 업데이트 적용, 네트워크 방화벽 구성, RDP 서버 접속 시도 기록 확인을 평소에 하는 습관을 들이는 것이 좋다.
                 </p>
             </li>
             <hr>
@@ -98,7 +110,14 @@
             <li>
                 <b>타입스크립트와 자바스크립트</b>
                 <p>
-
+                    타입스크립트(typescript)와 자바스크립트(javascript)는 둘 다 웹 개발에 사용되는 프로그래밍 언어이다.
+                    <br>자바스크립트는 HTML, CSS와 함께 웹 개발, 프론트엔드의 대표적인 언어로 꼽힌다.
+                    <br>웹 페이지 내의 다이나믹한 부분을 구현하는데 주로 사용되고 타입이 유동적이고 약한 것이 특징이다.
+                    <br>예를 들어, "1" + 0이라는 연산을 명령하면 "10", 선행되는 데이터 타입인 문자열 타입으로 결과가 도출된다.
+                    <br>이런 특성 때문에 자바스크립트는 특정 상황에서 예상치 못한 에러가 발생할 수 있다.
+                    <br>이와 반대로, 타입스크립트는 타입이 강하다는 특성을 갖는다.
+                    <br>때문에 위에서 제시한 예시와 같은 명령어를 작성할 경우 바로 에러가 난다. 
+                    <br>이런 이유로 타입스크립트를 사용하는 프로그래머들이 점점 증가하는 추세를 보이고 있다.
                 </p>
             </li>
             <hr>
@@ -112,7 +131,11 @@
             <li>
                 <b>nest-JS</b>
                 <p>
-
+                    NestJS는 Node.js를 위한 프레임워크로, 서버 사이드 애플리케이션을 구축하기 위한 도구와 구조를 제공합니다. 
+                    <br>Angular의 영향을 받아 Angular와 비슷한 구문과 패턴을 사용하며, 확장성과 모듈화를 강조하는 프레임워크이다.
+                    <br>TypeScript, 미들웨어, WebSocket을 지원하고 모듈 구조를 사용한다는 특징이 있다.
+                    <br>서버 사이드 애플리케이션부터 마이크로서비스 아키텍처까지 다양한 유형의 애플리케이션을 개발할 수 있도록 지원하고, 
+                    <br>생산성과 유지보수성을 높이기 위해 다양한 기능과 패턴을 제공한다.
                 </p>
             </li>
             <hr>
