--- a/1week_1.html
+++ b/1week_1.html
@@ -149,7 +149,9 @@
             <li>
                 <b>에자일 기법</b>
                 <p>
-
+                    애자일은 신속한 반복 작업을 통해 실제 작동 가능한 소프트웨어를 개발하여 지속적으로 제공하기 위한 소프트웨어 개발 방식을 말한다. 
+                    <br>소프트웨어 개발을 위한 유연하고 협력적인 방법론으로, 프로젝트를 작은 주기로 반복하며 요구사항의 변경에 적응하고 클라이언트와의 긴밀한 협력을 강조한다. 
+                    <br>적응적인 계획, 작은 팀의 자율성, 지속적인 품질 향상을 특징으로 하며, 개발 프로세스의 유연성과 효율성을 높여 가치 있는 소프트웨어를 제공한다.
                 </p>
             </li>
         </ul>
