--- a/1week_1.html
+++ b/1week_1.html
@@ -142,7 +142,13 @@
             <li>
                 <b>CI/CD</b>
                 <p>
-
+                    소프트웨어의 통합과 배포에 관련한 개념이다. 
+                    <br>CI(Continus Integration)은 지속적인 통합, 즉 "빌드와 테스트의 자동화"를 의미한다. 
+                    <br>개발의 모든 과정을 완료한 후 소프트웨어의 품질을 검토&관리하던 고전적인 방식의 단점을 해소하기 위한 개념으로,
+                    <br>말 그대로 코드의 변경 사항이 주기적으로 빌드 및 테스트되어 공유 리포지토리에 통합되는 과정을 통해 품질을 유지하며 개발을 진행하는 방법을 말한다. 
+                    <br>CD(Continus Delivery & Continus Deployment)는 CI의 연장선 개념으로, CI 과정을 통과한 버전을 마지막에 배포하는 과정에 대한 개념이다.
+                    <br>코드 변경 사항이 CI 과정을 모두 통과하면 프로덕션에 자동으로 배포되는 되기 때문에 신속하고 능률적으로 사용자에게 새로운 기능을 제공할 수 있다. 
+                    <br>CI/CD 파이프라인을 사용하면 프로젝트의 프로세스를 명확히 할 수 있고, 코드의 품질이 높아지고, 버전 관리를 효율적으로 할 수 있어서 개발 민첩성이 향상된다는 장점이 있다.
                 </p>
             </li>
             <hr>
