--- a/1week_1.html
+++ b/1week_1.html
@@ -96,7 +96,13 @@
             <li>
                 <b>병렬과 동시성 프로그래밍</b>
                 <p>
-
+                    다중 작업을 처리하는 방식에 대한 개념이다. 
+                    <br>병렬 프로그래밍은 여러 개의 스레드 혹은 프로세스를 사용하여 여러 명령을 동시에 처리하여 속도를 높이는 방식이다. 
+                    <br>명령들이 독립적이고, 서로 영향을 미치지 않는 경우에 병렬 처리가 가능하다. 주로 CPU-intensive한 작업을 처리하는데 사용된다. 
+                    <br>동시성 프로그래밍은 언뜻 보면 동시에 여러 명령어가 처리되는 것처럼 보이지만, 실제로는 명령어 사이클이 겹치는 작업들을 번갈아가며 처리하는 방식이다.
+                    <br>I/O-bound한 작업을 동시성으로 처리하여 대기 시간을 최소화할 수 있고, 스레드, 코루틴, 이벤트 기반 프로그래밍 등 관련된 다양한 기법을 사용할 수 있다.
+                    <br>병렬 프로그래밍과 동시성 프로그래밍은 서로 다른 개념이지만 병렬 처리된 작업들을 동시적으로 처리하거나, 
+                    <br>동시성 프로그래밍은 병렬적으로 실행될 수 있는 경우가 존재하므로 서로 다른 두 개념이 동시에 사용될 수 있다는 점 주의해서 사용해야한다.
                 </p>
             </li> 
             <hr>
