--- a/1week_1.html
+++ b/1week_1.html
@@ -109,7 +109,11 @@
             <li>
                 <b>문맥교환</b>
                 <p>
-
+                    운영체제에서 다루는 개념으로, 문맥(Context)은 프로세스와 관련된 정보들의 집합(Code, Data, Stack, .etc), 
+                    <br>CPU 문맥 교환(Context Switching)은 현재 프로세스의 Register context를 저장하는 Context Saving(문맥 저장)과정,
+                    <br>저장된 Register context를 프로세스로 복구하는 Context restoring(문맥 복구)과정으로 구성되어있다.
+                    <br>문맥 교환 시에는 소요되는 자원적 비용, Overhead가 발생하는데 이 오버헤드는 OS마다 상이하고 OS의 성능에 큰 영향을 미친다. 
+                    <br>그러므로 불필요한 Overhead를 최소화하는 것이 효율적인 운영체제 구성에서 중요한 점이라고 할 수 있다.
                 </p>
             </li>
             <hr>
@@ -130,7 +134,11 @@
             <li>
                 <b>REST-API</b>
                 <p>
-
+                    REST-API는 "Representational State Transfer API"의 약어이다.
+                    <br>API는 사용자가 요구하는 특정 명령을 대신 처리해주는 개발 도구다. 
+                    <br>은행에서 돈을 출금할 때 ATM기를 사용하는 경우를 예로 들자면, 이때 사용하는 ATM기를 API와 같은 개념으로 이해하면 된다. 
+                    <br>그런데 이런 명령을 처리할 때 필요한 리소스들이 규칙에 따라 정리된 상태라면 좀 더 수행 시간이 단축될 것이고, 컴퓨터가 효율적으로 동작하게 될 것이다. 
+                    <br>이런 생각을 바탕으로, 리소스를 이름 등의 기준으로 구분해서 다루고 그 리소스를 주고 받도록 구축한 시스템의 창구 정도로 정의할 수 있다. 
                 </p>
             </li>
             <hr>
