--- a/1week_1.html
+++ b/1week_1.html
@@ -40,7 +40,11 @@
             <li>
                 <b>티밍(본딩)</b>
                 <p>
-
+                    서버 티밍(Server Timing)은 웹 서버가 클라이언트에게 응답하는 과정에서 발생한 작업의 시간 관련 정보를 전달하는 기능이다.
+                    <br>이 기능은 브라우저 개발자 도구에서 확인할 수 있으며, 웹 애플리케이션의 성능 분석 및 최적화를 위해 사용되는데
+                    <br>티밍은 서버의 성능 분석, 디버깅 및 최적화 작업 등의 목적을 수행하는데 주로 사용된다.   
+                    <br>서버 본딩(Server Bonding)은 네트워크 통신에서 사용되는 기술로, 여러 개의 네트워크 링크를 병렬로 결합하여 대역폭을 증가시키는 방법이다.
+                    <br>네트워크 인터페이스 카드(NIC)나 라우터 등에서 지원되며, 네트워크 트래픽 분산, 서버 로드 밸런싱, 고속 데이터 전송 등에 활용된다.
                 </p>
             </li>
             <hr>
