--- a/1week_1.html
+++ b/1week_1.html
@@ -54,7 +54,7 @@
                     가상머신(Virtual Machine)은 현재 사용하는 운영체제 내에서 다른 운영체제를 동작할 수 있도록 해주는 응용 소프트웨어를 말한다.
                     <br>"가상"이라는 이름에서 알 수 있듯이 실제 존재하지는 않지만 가상의 새로운 컴퓨터 하드웨어가 존재하는 것처럼 여겨 
                     <br>그 하드웨어에 Windows, MacOS, Linux 등의 현재 Host컴퓨터의 OS와 같거나 다른 OS들을 설치해서 그 컴퓨터를 현실에서 동작하는 것과 같이 사용할 수 있다.
-                    <br>가상머신 중 네이티브(Native)는 주어진 플랫폼 또는 운영체제에서 직접 실행되는 응용 프로그램을 말한다.
+                    <br>가상머신(Native)은 주어진 플랫폼 또는 운영체제에서 직접 실행되는 응용 프로그램을 말한다.
                     <br>하지만 가상머신에는 몇 가지 단점이 존재하는데, 그 중 대표적인 것은 가상머신의 OS를 현재 Host컴퓨터에서 동작하고, 그 내부 동작들도 Host컴퓨터가 처리하게 되므로
                     <br>경우에 따라 동작 시간이 오래 걸리기도 하고, Host컴퓨터가 처리해야할 명령이 너무 많아진다는 것이다.
                     <br>이를 처리하기 위해 "도커"라는 컨테이너화(Containerization) 기술을 제공하는 오픈 소스 플랫폼을 사용한다.
