--- a/1week_2.html
+++ b/1week_2.html
@@ -90,14 +90,18 @@
             <li>
                 <b>DHCP</b>
                 <p>
-
+                    "Dynamic Host Configuration Protocol"의 약자로 컴퓨터 네트워크에서 IP 주소 및 기타 네트워크 구성 정보를 동적으로 할당하는 프로토콜이다.
+                    <br>DHCP를 사용하면 네트워크 장치들이 자동으로 IP 주소, 서브넷 마스크, 기본 게이트웨이, DNS 서버 등의 구성 정보를 얻을 수 있다.  
+                    <br>IP 주소 할당, 네트워크 구성 정보 제공, IP 주소 재사용, DHCP 서버와 클라이언트 간의 통신 등의 작업을 DHCP를 통해 자동으로 할 수 있고,
+                    <br>네트워크 관리의 편의성을 제공하고, IP 주소 관리를 자동화하여 오류를 방지한다는 점 때문에 주로 대규모 네트워크 환경에서 사용된다.
+                    <br>마이크로소프트 사의 기술이라는 것도 참고해두면 좋다. 
                 </p>
             </li>
             <hr>
             <li>
                 <b>DNS</b>
                 <p>
-
+                    
                 </p>
             </li>
             <hr>
