--- a/1week_2.html
+++ b/1week_2.html
@@ -83,7 +83,12 @@
             <li>
                 <b>HTTP</b>
                 <p>
-
+                    "HyperText Transfer Protocol"의 약자로, 웹에서 데이터를 주고받기 위해 사용되는 프로토콜이다. 
+                    <br>웹 브라우저와 웹 서버 사이의 통신을 담당하며, 클라이언트가 서버에 요청(Request)을 보내고, 서버는 클라이언트에게 응답(Response)을 반환하는 방식으로 동작한다. 
+                    <br>클라이언트는 다양한 메서드를 이용해 서버에 원하는 작업을 요구하는데, 메서드에는 GET(리소스 조회), POST(리소스 생성), PUT(리소스 업데이트), DELETE(리소스 삭제)가 있다. 
+                    <br>클라이언트가 서버에게 요청을 하면 서버는 클라이언트의 요청에 대한 처리 결과를 성공 여부 및 처리 상태를 나타내는 숫자로 구성된 상태 코드를 반환한다. 
+                    <br>우리가 가끔씩 웹페이지 오류로 마주하게 되는 404 not found도 http의 상태 코드의 종류 중 하나이다.
+                    <br>HTTP는 RESTf API같은 다양한 웹 서비스와의 통신에도 활용되는 웹 서비스 프로토콜의 기반이 되는 개념이므로 반드시 숙지해야한다.
                 </p>
             </li>
             <hr>
@@ -101,7 +106,11 @@
             <li>
                 <b>DNS</b>
                 <p>
-                    
+                    DNS(Domain Name System 혹은 Domain Name Service)는 컴퓨터 네트워크에서 도메인 이름을 IP 주소로 변환하는 시스템이다. 
+                    <br>네트워크에서 통신하기 위해 컴퓨터는 IP 주소를 사용하지만, 사람들은 기억하기 쉬운 도메인 이름을 사용한다. 
+                    <br>이럴 때 DNS는 도메인 이름과 IP 주소 간의 매핑을 관리하여 사용자가 도메인 이름으로 리소스를 찾을 수 있도록 해준다. 
+                    <br>DNS 덕분에 우리는 브라우저에서 사이트를 검색할 때 매번 사이트의 IP를 타이핑하지 않고
+                    <br>www.naver.com 등의 url, 도메인 이름만으로도 사이트를 검색해 접속할 수 있다. 
                 </p>
             </li>
             <hr>
