--- a/1week_2.html
+++ b/1week_2.html
@@ -6,14 +6,22 @@
             <li>
                 <b>폭포수 기법</b>
                 <p>
-
+                    소프트웨어 개발 모델 중 하나로, 한 번 떨어지면 거슬러 올라갈 수 없는 폭포수처럼 소프트웨어 개발도 각 단계를 확실히 매듭짓고 다음 단계로 넘어간다는 의미에서 붙여진 이름이다. 
+                    <br>한 단계가 완전히 마무리되면 다음 단계로 넘어가기 때문에 각 단계가 종료될 때마다 결과물이 분명하게 드러난다는 특징을 갖는다.
+                    <br>하지만 이런 모델에는 큰 문제점이 하나 있는데, 단계가 종료되면 이전 단계를 절대 다시 수행하지 않고 오로지 진행만 하기 때문에
+                    <br>클라이언트가 이전 단계에 대해 의견을 제시해도 그 의견이 반영되지 않아 최종 결과물을 확인했을 때 고객의 요구사항과 실제 결과물이 많이 다를 수 있다.
+                    <br>따라서 그때그때 새롭게 요구되는 사항에 대해서 유연하게 대처할 수 없는 방식이므로 리스크가 크다는 점에 유의해야 한다. 
                 </p>
             </li>
             <hr>
             <li>
                 <b>스위치와 라우터</b>
                 <p>
-
+                    네트워크를 연결할 때 사용되는 기기 종류이다. 허브, 스위치, 라우터 등의 네트워크 연결 장비가 있는데, 
+                    <br>허브는 자신과 연결된 기기 중 어느 하나가 메시지를 다른 기기로 전송하면 그 메시지를 전송하고(방향성 개념X), 
+                    <br>스위치는 동일한 경우에 해당 기기가 메시지를 전송하려고 한 목적지를 판별해 목적지 기기에만 메시지를 전송할 수 있지만 다른 대역대의 기기에는 전송할 수 없고, 
+                    <br>라우터는 동일한 경우에 목적지를 판별해 목적지 기기에만 메시지를 전송할 수도 있고, 다른 대역대의 기기를 서로 연결해주고 있어
+                    <br>대역대가 다른 기기가 통신하는 것을 가능하게 해준다. 참고로 허브는 해커들이 가장 해킹하기 쉬운 네트워크 장비이다.
                 </p>
             </li>
             <hr>
@@ -41,7 +49,10 @@
             <li>
                 <b>Dev-ops</b>
                 <p>
-
+                    DEV(개발) - OPS(운영)을 통합한 단어로, 개발팀과 운영팀 간의 협력을 통해 소프트웨어 제공 프로세스를 개선하는 방법론을 의미한다.
+                    <br>2008년 애자일 컨퍼런스에서 앤드루 클레이 쉐이퍼(Andrew Clay Shafer)와 패트릭 드부와(Patrick Debois)가 "애자일 인프라스트럭처"에 대해 논의하며 처음으로 사용되었다. 
+                    <br>주로 소프트웨어 제품이나 서비스를 알맞은 시기에 출시하기 위해서 개발과 운영이 상호의존적으로 대응해야 한다는 의미로 통용된다. 
+                    <br>데브옵스는 실제 결과를 기반으로 일정 주기마다 지속적으로 고객의 요구 사항을 파악하여 즉시 수정사항을 적용한다는 점에서 애자일 기법과 지속적 CI/CD 개념과도 관련 있다. 
                 </p>
             </li>
             <hr>
@@ -69,10 +80,16 @@
             <li>
                 <b>IP</b>
                 <p>
-
+                    "Internet Protocol"의 약자로, 네트워크 상의 집주소, 번지수 개념을 일컫는다. 
+                    <br>우리가 일상에서 목적지로 향하기 위해 목적지의 주소를 알면 갈 수 있듯이, 
+                    <br>네트워크에서도 마찬가지로 네트워크 상의 주소를 알면 목적지로 가거나 데이터를 전송하는 등의 명령을 실행할 수 있다. 
+                    <br>IP 주소의 표현 방식은 최대 12개의 숫자, 32 비트로 이루어진 IPv4 방식으로 0.0.0.0 ~ 255.255.255.255 범위의 IP를 사용할 수 있는데, 
+                    <br>전자 통신 기기는 IP를 부여받으면 네트워크 통신이 가능해진다. 시간이 지나면서 태블릿, 웨어러블 PC(애플 워치, 갤럭시 워치 등) 등의 기기가 개발됨으로 인해
+                    <br>IP를 부여해야하는 기기가 너무 많아짐으로 인해 서브네팅 등의 기술로 대역대를 더 세분화해 IP를 부여하는 방법인 Non-Classful 방식을 이용해서 IP를 부여하기도 한다.
+                    <br>시간이 지날 수록 관리할 IP가 더욱 더 늘어날 것이기 때문에 최대 32개의 숫자, 128 비트로 이루어진 IPv6 방식을 이용해 사용할 수 있는 IP 개수를 늘릴 예정이라고 한다.
                 </p>
             </li>
-            <br>
+            <hr>
             <li>
                 <b>TCP와 UDP</b>
                 <p>
