--- a/1week_2.html
+++ b/1week_2.html
@@ -59,7 +59,14 @@
             <li>
                 <b>포트포워딩(프록시)</b>
                 <p>
-
+                    포트 포워딩은 네트워크 트래픽을 외부 네트워크와 내부 네트워크 사이에서 전달하기 위해 특정 포트를 연결하는 것을 의미합니다. 
+                    <br>일반적으로 라우터나 방화벽에서 사용되며, 내부 네트워크에 있는 장치나 서비스에 외부에서 접근할 수 있도록 한다. 
+                    <br>예를 들어 외부 네트워크에서 특정 포트로 요청이 들어오면 라우터나 방화벽이 해당 요청을 내부망의 특정 IP 주소와 포트로 전달해서 
+                    <br>내부 서버가 해당 포트로 전달된 요청을 수행해서 응답을 반환하고, 이 응답은 다시 라우터(방화벽)을 통해 외부 네트워크로 전달 된다. 
+                    <br>주로 원격으로 내부 서버에 접속하거나, 웹 서비스를 외부에서 호스팅하는 경우에 사용할 수 있습니다.
+                    <br>프록시 서버는 클라이언트와 서버 간의 중계 역할을 하는 서버로, 클라이언트가 서버에 직접 연결하는 대신 클라이언트의 요청을 받아 
+                    <br>해당 요청을 서버로 전달하고, 서버의 응답을 다시 클라이언트로 전달하는데 이러한 중계 과정에서 
+                    <br>프록시는 클라이언트와 서버 간의 네트워크 통신을 제어하고 필터링하는 역할을 한다. 
                 </p>
             </li>
             <hr>
