--- a/1week_2.html
+++ b/1week_2.html
@@ -28,21 +28,36 @@
             <li>
                 <b>클라우드 서버</b>
                 <p>
-
+                    클라우드 서버는 애플리케이션을 제공하고, 정보를 처리하거나 데이터 스토리지를 제공하는 강력한 물리적 또는 가상 인프라이다.  
+                    <br>클라우드 서비스 제공업체는 IaaS(Infrastructure-as-a-service) 모델을 사용하여 고객이 사용할 수 있는 가상 또는 물리적 서버를 구축한다.
+                    <br>가상화된 환경에서 실행되며, 필요에 따라 자원을 동적으로 할당하거나 조정할 수 있고, 클라우드 서비스 제공 업체가 관리하므로 
+                    <br>사용자는 자원 관리, 보안 패치, 유지 보수 등의 부담을 덜 수 있다. 클라우드 서버는 확장성, 가용성, 유연성 및 비용 효율성을 제공하여 대부분의 사용자에게 유용한 방법으로 사용될 수 있다. 
+                    <br>참고로 몇몇 클라우드 서버는 하나의 물리적 서버를 여러 가상 서버로 분할하는 가상화 소프트웨어를 사용하여 구축된다. [IBM 웹사이트에서 추출]
                 </p>
             </li>
             <hr>
             <li>
                 <b>nginx</b>
                 <p>
-
+                    웹 서버용 오픈 소스 소프트웨어로, 러시아의 프로그램 개발자인 이고르 시쇼브(Igor Sysoev)가 개발하여 2004년 발표하였다.
+                    <br>nginx(이하 엔진엑스)가 제공하는 각 기능은 모듈화되어 있어 효율적인 운영을 할 수 있고, 
+                    <br>흔히 사용되는 아파치(Apache) 웹 서버 소프트웨어보다 메모리 사용이 효율적이며 클라이언트 처리 속도가 더 빠르다.
+                    <br>아파치(Apache)는 사용자 트래픽이 폭증하는 경우 신속히 처리하지 못하는 문제가 있는 반면,
+                    <br>엔진엑스는 아파치의 문제점을 보완해 메모리를 사용량이 적어 비교적 가볍고 대량 접속 문제를 신속히 효율적으로 처리한다. 
+                    <br>엔진엑스는 기본적인 웹 서버 기능 외에 추가로 ‘캐싱(caching)’,  ‘트래픽 부하 균형(load balancing)’, ‘TLS/SSL 보안’, ‘메일 프록시’ 등의 기능을 제공한다.
                 </p>
             </li>
             <hr>
             <li>
                 <b>메모리 변조 해킹-Rust의 메모리 프로텍션</b>
                 <p>
-
+                    메모리 변조 해킹은 해커가 실행 중인 프로그램의 메모리를 수정하여 제어 권한을 얻는 공격이다. 
+                    <br>메모리 변조 해킹 공격을 방지하기 위해 Rust 같은 언어는 메모리 프로텍션 메커니즘을 제공한다. 
+                    <br>메모리 안정성을 강조하는 Rust언어는 변수에 대한 소유권은 단일 스레드나 여러 스레드 간에 안전하게 전달되며, 
+                    <br>데이터 경쟁이나 잘못된 메모리 접근으로부터 보호할 수 있는 "소유권 시스템", 메모리 접근을 범위 검사하여 
+                    <br>버퍼 오버플로우와 같은 메모리 침범을 방지하는 "범위 검사", Mutex, Arc, RwLock 등의 타입을 사용하여 동시성 문제를 방지하고, 
+                    <br>데이터 레이스 및 다른 스레드 간의 메모리 침범을 방지하기 위해 안전한 스레드 동기화 기능을 제공한다. 
+                    <br>메모리 프로텍션만으로는 완벽한 보안을 장담할 수 없으므로 외부 라이브러리와의 상호 작용, 안전하지 않은 코드 연결에 대해서도 신중하게 처리해야 한다. 
                 </p>
             </li>
             <hr>
@@ -73,21 +88,27 @@
             <li>
                 <b>리버스 엔지니어링</b>
                 <p>
-
+                    완성된 제품을 분석하여 제품의 기본적인 설계 개념과 적용 기술을 파악하고 재현하는 소프트웨어의 한 세부 분야이다. 
+                    <br>제품 설계 -> 개발 작업 -> 제품화의 일반적인 설계 방식을 거꾸로 파고들어 소프트웨어의 실행 파일을 수정하거나 프로그램의 동작을 변경할 수 있고,
+                    <br>제품의 설계 방식을 분석해 어떤 기술을 쓰면 좀 더 개선된 제품을 만들 수 있을지 연구할 수 있다.  
+                    <br>이를 이용해 유사한 형태의 복제 프로그램 혹은 기능이 향상된 프로그램도 개발할 수 있다. 소프트웨어에 대한 역공학 자체는 위법 행위가 아니지만, 
+                    <br>대부분의 제품이 이에 대해 금지하고 있어 이러한 수법으로 개발한 제품은 지적 재산권을 침해할 위험성이 있다는 점 유의해야 한다.
                 </p>
             </li>
             <hr>
             <li>
                 <b>디지털 포렌식</b>
                 <p>
-
+                    일반적으로 우리가 아는 디지털 포렌식은 디지털 디바이스 사용 중 발생한 범죄나 사건과 관련된 디지털 증거를 수집, 분석하는 과학적인 수사법이다. 
+                    <br>PC, 스마트폰, 태블릿 등의 디지털 기기를 조사하여 정보를 추출하고 범죄 혹은 사건에 대한 증거 수집을 위해 기기의 잠금을 풀기도 하고, 삭제된 데이터를 복구해 증거를 수집한다. 
+                    <br>공부하는 것이 많이 어렵고 이 분야로 진로를 잡은 사람들이 그리 많지 않아 관심과 실력이 있다면 디지털 포렌식에 대해 공부하는 것도 매우 좋다. 
                 </p>
             </li>
             <hr>
             <li>
                 <b>IP</b>
                 <p>
-                    "Internet Protocol"의 약자로, 네트워크 상의 집주소, 번지수 개념을 일컫는다. 
+                    "Internet Protocol"의 약자로, <b>네트워크 상의 집주소, 번지수 개념</b>을 일컫는다. 
                     <br>우리가 일상에서 목적지로 향하기 위해 목적지의 주소를 알면 갈 수 있듯이, 
                     <br>네트워크에서도 마찬가지로 네트워크 상의 주소를 알면 목적지로 가거나 데이터를 전송하는 등의 명령을 실행할 수 있다. 
                     <br>IP 주소의 표현 방식은 최대 12개의 숫자, 32 비트로 이루어진 IPv4 방식으로 0.0.0.0 ~ 255.255.255.255 범위의 IP를 사용할 수 있는데, 
@@ -100,14 +121,20 @@
             <li>
                 <b>TCP와 UDP</b>
                 <p>
-
+                    TCP는 "Transmission Control Protocol"의 약자로, 연결을 <b>지향</b>하는 프로토콜이다.
+                    <br>두 기기가 서로 통신(연결)된 후 데이터를 주고 받고 안전하게 연결을 종료하는 방식이기 때문에 데이터 전송에 다소 시간이 소요된다. 
+                    <br>이와 반대로 UDP는 "User Datagram Protocol"의 약자로, 비연결성 프로토콜이다. 
+                    <br>두 기기가 서로 데이터를 주거나 받기 전 연결을 하지 않고, 일방적으로 데이터를 전송하는 방식의 프로토콜이다. 
+                    <br>TCP는 연속성보다 신뢰성 있는 전송이 중요할 때 사용되는 프로토콜이며,
+                    <br>UDP는 TCP보다 빠르고 네트워크 부하가 적다는 장점이 있지만, 신뢰성 있는 데이터 전송을 보장하지는 않는다(확인을 안하기 때문).
+                    <br>그렇기 때문에 신뢰성보다는 연속성이 중요한 실시간 스트리밍과 같은 서비스에 자주 사용된다.
                 </p>
             </li>
             <hr>
             <li>
                 <b>HTTP</b>
                 <p>
-                    "HyperText Transfer Protocol"의 약자로, 웹에서 데이터를 주고받기 위해 사용되는 프로토콜이다. 
+                    "HyperText Transfer Protocol"의 약자로, <b>웹에서 데이터를 주고받기 위해 사용되는 프로토콜</b>이다. 
                     <br>웹 브라우저와 웹 서버 사이의 통신을 담당하며, 클라이언트가 서버에 요청(Request)을 보내고, 서버는 클라이언트에게 응답(Response)을 반환하는 방식으로 동작한다. 
                     <br>클라이언트는 다양한 메서드를 이용해 서버에 원하는 작업을 요구하는데, 메서드에는 GET(리소스 조회), POST(리소스 생성), PUT(리소스 업데이트), DELETE(리소스 삭제)가 있다. 
                     <br>클라이언트가 서버에게 요청을 하면 서버는 클라이언트의 요청에 대한 처리 결과를 성공 여부 및 처리 상태를 나타내는 숫자로 구성된 상태 코드를 반환한다. 
@@ -119,7 +146,7 @@
             <li>
                 <b>DHCP</b>
                 <p>
-                    "Dynamic Host Configuration Protocol"의 약자로 컴퓨터 네트워크에서 IP 주소 및 기타 네트워크 구성 정보를 동적으로 할당하는 프로토콜이다.
+                    "Dynamic Host Configuration Protocol"의 약자로 컴퓨터 네트워크에서 <b>IP 주소 및 기타 네트워크 구성 정보를 동적으로 할당하는 프로토콜</b>이다.
                     <br>DHCP를 사용하면 네트워크 장치들이 자동으로 IP 주소, 서브넷 마스크, 기본 게이트웨이, DNS 서버 등의 구성 정보를 얻을 수 있다.  
                     <br>IP 주소 할당, 네트워크 구성 정보 제공, IP 주소 재사용, DHCP 서버와 클라이언트 간의 통신 등의 작업을 DHCP를 통해 자동으로 할 수 있고,
                     <br>네트워크 관리의 편의성을 제공하고, IP 주소 관리를 자동화하여 오류를 방지한다는 점 때문에 주로 대규모 네트워크 환경에서 사용된다.
@@ -130,7 +157,7 @@
             <li>
                 <b>DNS</b>
                 <p>
-                    DNS(Domain Name System 혹은 Domain Name Service)는 컴퓨터 네트워크에서 도메인 이름을 IP 주소로 변환하는 시스템이다. 
+                    DNS(Domain Name System 혹은 Domain Name Service)는 컴퓨터 네트워크에서 <b>도메인 이름을 IP 주소로 변환하는 시스템</b>이다. 
                     <br>네트워크에서 통신하기 위해 컴퓨터는 IP 주소를 사용하지만, 사람들은 기억하기 쉬운 도메인 이름을 사용한다. 
                     <br>이럴 때 DNS는 도메인 이름과 IP 주소 간의 매핑을 관리하여 사용자가 도메인 이름으로 리소스를 찾을 수 있도록 해준다. 
                     <br>DNS 덕분에 우리는 브라우저에서 사이트를 검색할 때 매번 사이트의 IP를 타이핑하지 않고
@@ -141,7 +168,11 @@
             <li>
                 <b>OSI-7계층</b>
                 <p>
-                    
+                    OSI (Open Systems Interconnection) 7 Layer 모델은 표준 프로토콜을 사용하여 다양한 통신 시스템이 통신할 수 있도록 국제표준화기구에서 만든 개념 모델이다. 
+                    <br>이 모델은 네트워크 통신을 물리 계층(Physical Layer), 데이터 링크 계층(Data Link Layer), 네트워크 계층(Network Layer), 전송 계층(Transport Layer), 
+                    <br>세션 계층(Session Layer), 표현 계층(Presentation Layer), 응용 계층(Application Layer)의 단계로 구별하여 관리 가능하도록 설계되었다. 
+                    <br>각각 독립적으로 계층화된 OSI 모델은 표준화된 방식으로 네트워크 프로토콜을 설계하고 구현할 수 있도록 해준다. 
+                    <br>각 계층은 본 계층의 특징을 이용하여 상위 계층과 하위 계층 간의 상호 작용을 지원한다. 네트워크의 기본 토대가 되는 개념이라고 할 수 있다. 
                 </p>
             </li>
         </ul>
