--- a/2week/2week_1.html
+++ b/2week/2week_1.html
@@ -138,7 +138,7 @@
                 <p>
                     Linux에서 service 명령어는 시스템 서비스를 관리하는 데 사용되는 유틸리티로,
                     <br>서비스의 시작, 중지, 재시작 등의 작업을 수행할 수 있다. 
-                    <br>"service <service_name> <action>" 의 형태로 명령어를 작성하면 되고,
+                    <br>"service [service_name] [action]" 의 형태로 명령어를 작성하면 되고,
                     <br>service apache2 start - Apache 서버 동작
                     <br>service mysql restart - mysql 서비스 재시작 
 
