--- a/3week/3week_1.html
+++ b/3week/3week_1.html
@@ -13,7 +13,14 @@
             <li>
                 <b>C언어 헤더 파일</b> <!--stdio.h, stdlib.h, string.h, math.h.. 요런 거 설명하면 될 듯-->
                 <p>
-                    
+                    C언어의 헤더 파일은 기존에 다른 C언어 개발자들이 개발을 편리하게 하기 위해 미리 만들어둔 함수나 구조체 등을 포함한 파일이다. 
+                    <br>파일의 최상단에 #include <"헤더파일명"> 과 같은 형식으로 작성하여 파일에 포함된 데이터를 사용할 수 있다.
+                    <br>대표적인 헤더 파일로 stdio.h, stdlib.h, string.h, math.h 등이 있는데, 이 헤더 파일을 include 하여 가져오게 되면
+                    <br>현재 내가 작업 중인 파일에서 그 헤더파일에 포함된 함수, 구조체 등을 가져다 사용할 수 있다. 
+                    <br>또한 기존에 공식적으로 발표된 헤더파일들뿐만 아니라 내가 필요하다면 직접 필요한 구조체나 함수가 포함된
+                    <br>헤더파일을 새로 생성해 include해서 사용할 수도 있다. 예를 들어 stack을 구현하기 위한 몇 가지 함수가 포함된 헤더파일을 만들어
+                    <br>그때 그때 가져다쓰고 싶다면 createNode(), isEmpty(), isFull(),insert(), delete() 등의 함수를 파일에 작성하고,
+                    <br>stack.h라는 이름으로 저장하여 헤더파일로 가져다 쓸 수 있다.
                 </p>
             </li>
             <hr>
