--- a/3week/3week_1.html
+++ b/3week/3week_1.html
@@ -27,7 +27,23 @@
             <li>
                 <b>포인터(*)와 참조(&)의 차이</b> <!--포인터 문법에서 *랑 &의 의미가 뭔지, 포인터랑 참조의 차이를 설명-->
                 <p>
-                    
+                    우선 포인터는 C언어에서 처음 등장하는 개념이다. 포인터라는 이름처럼 데이터가 저장된 주소를 '가리키는' 개념이다. 
+                    <br>포인터의 크기는 일정하고, primitive type별로 자신에게 맞는 포인터를 사용할 수 있다. 
+                    <br>예를 들어, int형 포인터로 int형 데이터가 저장된 위치를 가리키고 싶다면
+                    <br>int a = 10;
+                    <br>int* ptr = &a; // *(애스터리스크)는 포인터를 상징, &은 주소를 가져오도록 하는 주소연산자이다
+                    <br>과 같은 방법으로 가리킬 수 있다. 또한,
+                    <br>int a = 10;
+                    <br>int* ptr = &a; 
+                    <br>printf("%d", *ptr); // 포인터 변수 앞에 *를 붙이면 포인터가 가리키는 위치의 데이터를 가져온다
+                    <br>과 같은 방법으로 포인터가 가리키고 있는 위치에 저장된 데이터를 출력할 수도 있다.
+                    <br>사람들이 많이 헷갈려하는 개념 중 하나에 속하는 포인터이니 이런 부분돋 명확하게 이해를 해야
+                    <br>나중에 자료구조나 알고리즘을 공부할 때 걸림돌 없이 쭉쭉 공부해 나갈 수 있다. 
+                    <br>Java언어를 배우면 포인터가 아니라 참조값으로 데이터를 가리킨다는 것을 배우게 되는데,
+                    <br>실제 자바에서는 포인터라는 개념 자체가 없고, 참조, reference값으로 데이터를 가리킨다. 
+                    <br>참조값은 데이터가 저장된 위치를 가리키는 것이 아니라 데이터, 그 객체(Object) 자체를 가리킨다. 
+                    <br>자바에서 사용하는 객체들은 참조값을 이용해 자신이 가리키는 객체를 버리고 다른 객체를 가리킬 수도,
+                    <br>한 객체를 다른 여러 객체들이 가리킬 수도 있다. 
                 </p>
             </li>
             <hr>
