--- a/3week/3week_2.html
+++ b/3week/3week_2.html
@@ -18,9 +18,15 @@
             </li>
             <hr>
             <li>
-                <b>파일 디스크립터(소켓)</b> <!--소켓에 대한 설명을 하면 되겠지..?-->
+                <b>파일 디스크립터(소켓)</b>
                 <p>
-                    
+                    파일 디스크립터(file discripter)는 파일이나 소켓과 같은 입출력 장치에 대한 액세스 권한을 부여하는 숫자를 말한다. 
+                    <br>운영 체제에 의해 관리되며, 프로세스가 파일이나 소켓에 액세스하려면 먼저 파일 디스크립터를 얻어야 한다.
+                    <br>파일 디스크립터는 프로세스가 파일이나 소켓에 액세스하는 데 사용되고, 이를 이용해 파일을 열고, 읽고, 쓰고, 닫을 수 있다.
+                    <br>또한 소켓을 연결하여 데이터 전송 및 통신, 연결 단절의 작업을 실행할 수도 있다. 
+                    <br>프로세스가 파일이나 소켓에 액세스하는 데 필수적인 요소로 파일 디스크립터가 없다면 프로세스는 파일이나 소켓에 액세스할 수 없다. 
+                    <br>소켓은 프로세스 간에 데이터를 주고받기 위한 통신 채널로, TCP 소켓과 UDP 소켓으로 구분된다.
+                    <br>TCP 소켓은 결과를 신뢰할 수 있는 통신을 제공하며, UDP 소켓은 결과를 신뢰할 수 없는 통신을 제공한다. 
                 </p>
             </li>
             <hr>
