--- a/3week/3week_1.html
+++ b/3week/3week_1.html
@@ -11,8 +11,8 @@
                     <br>보다 간결하고 효율적인 코드를 작성할 수 있다. 또한 멀티스레딩을 지원하여 병렬 처리가 가능하며, 
                     <br>가비지 컬렉션(Garbage Collecion)을 지원하여 메모리 관리가 간편하다는 장점도 겸비하고 있다. 
                     <br>웹 개발, 네트워크 프로그래밍, 클라우드 컴퓨팅 등 다양한 분야에서 사용되고 있다. 
-                    <br>참고로 C++의 복잡한 면에 불편함을 느껴서 새롭게 GO라는 언어를 만들었고, 새로운 패키지에 넣을 데이터는 세 사람이 합의해야 결정된다고 한다.
-                    <br>Go 언어 사용자들을 고퍼(Gopher)라고 부르며, 고퍼들을 위한 연례행사인 고퍼콘(Gophercon)이 세계 각국에서 매년 열리고 있다고 한다. 
+                    <br>C++의 복잡한 면에 불편함을 느껴서 새롭게 GO라는 언어를 만들었고, 새로운 패키지에 넣을 데이터는 세 사람이 합의해야 결정된다고 한다.
+                    <br>참고로 Go 언어 사용자들을 고퍼(Gopher)라고 부르며, 고퍼들을 위한 연례행사인 고퍼콘(Gophercon)이 세계 각국에서 매년 열리고 있다고 한다. 
                 </p>
             </li>
             <hr>
