--- a/3week/3week_1.html
+++ b/3week/3week_1.html
@@ -143,11 +143,23 @@
             </li> 
             <hr>
             <li>
-                <b>함수 호출 방식(cdecl, stdcall, fastcall)</b> <!--엄.. 잘 모르겠다 찾아보자-->
+                <b>함수 호출 방식(cdecl, stdcall, fastcall)</b>
                 <p>
-                    함수 호출 규약에 대해 알아보자.
-                    <br>C언어에서 함수를 호출할 때 보통 사용하는 개념은 총 3가지가 있다. 
-                    <br>첫 번째로 cdecl은 
+                    함수 호출 방식에는 크게 cdecl, stdcall, fastcall 3가지가 있다.
+                    <br>첫번째로 cdecl은 C declaration calling convention의 약자이고, C언어의 함수 호출 규약이다.
+                    <br>인수 스택을 이용하여 인수를 전달하며, 호출자(caller) 측에서 인수 스택을 정리하고
+                    <br>파라미터를 오른쪽에서 왼쪽의 순서로 스택에 저장하는 방식으로 구성되어 있다. 
+                    <br>cdecl을 사용하면 함수 호출 시 스택의 해제를 호출자 코드에서 수행해야 해서 
+                    <br>함수가 호출될 때마다 프로그램 실행 속도가 느려질 수 있음을 감안해야한다. 
+                    <br>두번째, stdcall은 Standard call의 약자이고, WinAPI에서 사용하는 함수 호출 규약이다. 
+                    <br>스택을 이용하여 인수를 전달하며, 호출 대상(callee)이 인수 스택을 정리하고
+                    <br>파라미터를 오른쪽에서 왼쪽의 순서로 스택에 저장한다. 
+                    <br>호출자와 대상 함수의 스택 정리 작업이 중복되지 않도록 유의해서 사용해야한다. 
+                    <br>마지막으로 fastcall은 파라미터를 레지스터로 전달하는 함수 호출 규약이다. 
+                    <br>레지스터를 이용하여 처음 2개의 인수를 전달하며, 3개 이상의 인수는 스택을 이용하여 전달하는 방식이다. 
+                    <br>※참고로 Win32 API에서는 지원하지 않는다.
+                    <br>위 3가지 함수 호출 규약은 인수 전달 방식과 스택 정리 방식, 레지스터 사용에서 조금씩 차이점이 있다.
+                    <br>작성한 프로그램 코드에 따라서 적절한 함수 호출 규약을 선택하여 사용하는 것이 중요하다. 
                 </p>
             </li>
         </ul>
