--- a/3week/3week_2.html
+++ b/3week/3week_2.html
@@ -33,14 +33,39 @@
             <li>
                 <b>http 요청(+헤더) 과 응답(+헤더)</b> <!--HTTP 기반으로 클라이언트-서버 모델이 어떤 방식으로 통신하는지 설명-->
                 <p>
-                    
+                    HTTP(Hypertext Transfer Protocol)는 인터넷 상에서 데이터를 주고받을 때 사용되는 프로토콜이다. 
+                    <br>클라이언트-서버 모델에서 클라이언트와 서버는 HTTP Request와 HTTP Response로 서로 통신한다. 
+                    <br>HTTP Request는 클라이언트 측에서 서버에게 이런이런 자료가 필요한데, 혹시 있어? 라고 메시지를 보내 데이터를 '요청'하는 것이다.
+                    <br>클라이언트가 보내는 HTTP Request에는 HTTP 메소드(GET, POST), 요청 URL, HTTP 버전이 담긴 Request Line,
+                    <br>클라이언트가 서버에게 전달하는 정보를 포함한 Headers, HTTP 요청에 포함되는 데이터인 Body가 포함되어있다. 
+                    <br>이렇게 클라이언트가 서버에게 요청 메시지를 보내면
+                    <br>서버 측에서는 이 요청 메시지를 확인해 HTTP Response를 클라이언트에게 보내서 
+                    <br>클라이언트가 요청한 파일의 존재 여부 등을 알려준다. 
+                    <br>HTTP Response에는 HTTP 버전, 상태 코드, 상태 메세지를 포함한 Status Line,
+                    <br>서버가 클라이언트에게 전달하는 정보를 포함한 Headers, 서버가 클라이언트에게 보내는 데이터가 담긴 Body가 포함되어있다.
+                    <br>참고로 Request와 Response 모두에 포함되는 Headers는 이를 통해 클라이언트와 서버가 서로 정보를 전달하고, 
+                    <br>HTTP 요청과 응답의 내용 및 처리 방식을 설정할 수 있으므로 이 프로토콜에서 핵심적인 내용이라고 할 수 있다. 
+                    <br>+) 캐시 제어, 인증, 페이지 갱신 등 HTTP 프로토콜의 다양한 기능이 HTTP 헤더를 통해서 구현된다.
                 </p>
             </li>
             <hr>
             <li>
                 <b>스트레스 테스트</b> <!--서버가 어디까지 버틸 수 있는지 임의로 내 서버를 공격하는 것.-->
                 <p>
-
+                    서버 스트레스 테스트란, 서버가 참여자 수가 증가하여 더 많은 트래픽을 처리할 때 안정성 및 성능을 확인하는 과정을 말한다.
+                    <br>서버에 접속한 유저가 증가하면 서버의 프로세스 처리 능력은 저하하게 되는데
+                    <br>이렇게 접속 유저가 급증해 서버에 무리가 가는 수준이 어느 정도인지,
+                    <br>이런 상황일 때 어떤 조치를 취해주면 서버가 안정화되는지 등을 파악하기 위해 테스트를 진행한다. 
+                    <br>사람으로 치자면 예방접종 맞히는 그런 느낌..?
+                    <br>Load Testing, Stress Testing, Soak Testing 등의 다양한 방법으로 테스트할 수 있고
+                    <br>보통 서버 과부하를 유발하여 지속적으로 스트레스를 주고 서버의 반응 상태를 관찰하는 것이 일반적인 방식이다. 
+                    <br>Load Testing은 시스템이 일정 수준 이상의 처리 능력을 유지할 수 있는지 테스트하는 방법으로,
+                    <br>대규모 트래픽이 발생하는 웹 사이트에서의 부하 테스트가 이에 해당하고
+                    <br>Stress Testing은 시스템이 한계치에 다다를 때까지 어떤 식으로든 대응을 할 수 있는지 테스트하는 방식으로,
+                    <br>사용자가 엄청나게 많은 입력을 한 경우에 시스템이 이에 대비하는 것을 테스트하는 방법이 해당한다. 
+                    <br>마지막으로 Soak Testing은 장시간에 걸쳐 지속적으로 부하를 가했을 때 
+                    <br>시스템이 얼마나 오래 작동할 수 있는지 테스트하는 방식이다. 
+                    <br>이 중 Load Testing과 Stress Testing 방법이 가장 자주 사용되는 방법이다. 
                 </p>
             </li>
             <hr>
