--- a/3week/3week_2.html
+++ b/3week/3week_2.html
@@ -94,13 +94,46 @@
                 <b>HTTP1.0과 1.1</b> <!--뭔가 네트워크 공부할 때 본 거 같은데 기억이 잘 안 난다-->
                 <p>
                     
+                    HTTP 1.0과 1.1 모두 현재 웹에서 가장 많이 사용하는 HTTP 프로토콜 버전입니다. 
+                    HTTP 1.0은 초창기 HTTP 프로토콜입니다. 이 버전에서는 HTTP 요청과 응답이 한 번 이루어지면 TCP 연결이 바로 끊어집니다. 
+                    따라서 웹페이지의 크기가 크거나 많은 파일을 다운로드하는 경우 매번 연결을 새롭게 열고 닫아야 하기 때문에 
+                    네트워크 속도가 늦어진다는 단점이 있습니다. HTTP 1.1 버전에서는 HTTP 1.0의 이러한 문제점을 해결하기 위해 
+                    여러가지 기능이 추가되었습니다. 이 버전에서는 요청-응답 사이에 TCP 연결을 유지할 수 있으므로 불필요한 연결 과정을 줄일 수 있어 
+                    속도가 빨라졌습니다. 또한 HTTP 헤더에 압축 기능과 청크 전송 인코딩(Chunked Transfer Encoding) 기능이 추가되어 
+                    전송할 데이터를 압축하거나 분할하여 보내는 방식으로 네트워크 효율성도 개선되었습니다. 
+                    HTTP 1.0과 HTTP 1.1은 기능과 특징이 다르므로 호환성에 문제가 있을 수 있습니다. 
+                    그러나 이러한 호환성 문제를 해결하기 위한 방법들이 제공되고 있습니다. 
+                    대표적인 예로 HTTP/1.1이 기본 설정이 되어 있는 많은 서버에서는 
+                    HTTP/1.0 요청을 최대한 HTTP/1.1 요청과 비슷하게 처리하도록 설계되어 있습니다.
+
+                    HTTP / 1.0과 HTTP / 1.1의 가장 큰 차이점은 지속 커넥션(persistent connection)과 파이프라인(pipeline) 지원 여부입니다. 
+                    HTTP / 1.0은 기본적으로 요청과 응답 각각에 대한 연결(connection)을 매번 새롭게 열고 닫아야 했기 때문에, 
+                    매 요청마다 연결 과정을 반복하는 오버헤드를 가지고 있었습니다. 
+                    이와 달리 HTTP / 1.1은 요청과 응답 각각에 대한 지속 커넥션을 지원하므로, 매번 새로 연결할 필요가 없어졌습니다. 
+                    이는 웹 서버와 클라이언트 간의 통신 속도를 대폭 향상시켰습니다. 또한, HTTP / 1.1은 파이프라인(pipeline) 방식도 지원합니다. 
+                    파이프라인 방식은 클라이언트가 여러 개의 HTTP 요청을 동시에 보낼 수 있게 되어, 서버의 응답 대기 시간을 대폭 단축시킬 수 있습니다. 
+                    즉, 클라이언트는 요청 A, B, C를 직렬적으로 보내지 않고 동시에 보낼 수 있습니다. 
+                    서버는 해당 요청에 대한 응답을 순서대로 보내주면 됩니다. HTTP / 1.1은 또한 새로운 헤더를 추가해 
+                    HTTP 요청과 응답의 품질과 안전성을 높였습니다. 예를 들면, Cache-control 헤더는 클라이언트와 서버 간의 캐싱 동작을 제어하고, 
+                    Range 헤더는 요청한 리소스의 일부분을 다운로드할 수 있는 기능을 제공합니다. 
+                    더불어, HTTP / 1.1은 보안성을 개선하기 위해 SSL/TLS 암호화를 기본적으로 지원합니다.
                 </p>
             </li> 
             <hr>
             <li>
-                <b>HTTPS(SSL/TLS)</b> <!--HTTPS 설명하고 SSL, TLS도 설명-->
+                <b>HTTPS(SSL/TLS)</b>
                 <p>
-                    
+                    HTTPS(Hyper Text Transfer Protocol Secure)는 HTTP 프로토콜의 보안 강화 버전으로,
+                    <br>SSL(Secure Sockets Layer) 또는 TLS(Transport Layer Security) 프로토콜을 이용해서
+                    <br>암호화된 통신 채널을 생성하여 데이터를 보호하는 방식으로 동작한다. 
+                    <br>HTTPS는 아래와 같은 방식으로 동작한다. 
+                    <br>1. 클라이언트가 HTTPS로 암호화된 페이지에 접속하면 서버는 공개키(Public Key)를 클라이언트에게 제공
+                    <br>2. 클라이언트는 공개키를 이용하여 세션키(Session Key)를 생성하고, 이 세션키를 이용하여 데이터를 암호화
+                    <br>3. 암호화된 데이터를 서버에 전송하면, 서버는 이를 복호화하여 응답을 전송
+                    <br>또한 HTTPS는 프라이버시 보호와 인증 등의 기능을 제공하여, 안전한 인터넷 사용 환경을 제공하는 데 큰 역할을 한다.
+                    <br>HTTPS를 사용하면 해커가 데이터를 조작하거나 해킹하여 확인하기가 조금 어려워져서 보안이 탄탄해진다. 
+                    <br>참고로 http로 페이지에 접속했을 때 -s를 붙여주면 임시로 https로 접근하게 되어
+                    <br>일시적으로 보안이 강화된 상태에서 데이터를 주고받을 수 있게 된다.
                 </p>
             </li>
         </ul>
